// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<URLMetaPreview /> should render 1`] = `
<div>
  <div
    class="url-meta-preview bg-white h-100 rounded-sm shadow-sm"
  >
    <div
      class="row h-100"
    >
      <div
        class="col-4 pe-0"
      >
        <div
          class="w-100 h-100 bg-cover bg-center"
          data-testid="url-meta-preview-image"
          style="background-image: url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg);"
        />
      </div>
      <div
        class="col-8 ps-0"
      >
        <div
          class="d-flex flex-column justify-content-between h-100 p-1 text-xs"
        >
          <a
            class="fw-bold text-truncate"
            href="https://www.bbc.co.uk/news/business-45242008"
            rel="noopener noreferrer"
            target="_blank"
          >
            National Living Wage 'fails to cover families' basic needs
          </a>
          <div
            class="fw-light text-gray-500 text-truncate"
            data-testid="url-meta-preview-description"
          >
            Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says.
          </div>
          <a
            class="d-block text-body text-truncate"
            data-testid="url-meta-preview-url"
            href="https://www.bbc.co.uk/news/business-45242008"
            rel="noopener noreferrer"
            target="_blank"
          >
            bbc.co.uk/news/business-45242008
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<URLMetaPreview /> should render in vertical mode 1`] = `
<div>
  <div
    class="url-meta-preview bg-white h-100 rounded-sm shadow-sm"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <div
          class="w-100 h-100 bg-cover bg-center"
          data-testid="url-meta-preview-image"
          style="background-image: url(https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg);"
        >
          <img
            alt=""
            class="w-100 rounded-top-sm d-block"
            src="https://ichef.bbci.co.uk/news/1024/branded_news/81C6/production/_98022233_gettyimages-842414672-1.jpg"
          />
        </div>
      </div>
      <div
        class=""
      >
        <div
          class="d-flex flex-column justify-content-between h-100 p-1 text-xs"
        >
          <a
            class="fw-bold text-truncate"
            href="https://www.bbc.co.uk/news/business-45242008"
            rel="noopener noreferrer"
            target="_blank"
          >
            National Living Wage 'fails to cover families' basic needs
          </a>
          <div
            class="fw-light text-gray-500 text-truncate"
            data-testid="url-meta-preview-description"
          >
            Low-paid parents working full-time do not earn enough to meet their families' needs, a charity says.
          </div>
          <a
            class="d-block text-body text-truncate"
            data-testid="url-meta-preview-url"
            href="https://www.bbc.co.uk/news/business-45242008"
            rel="noopener noreferrer"
            target="_blank"
          >
            bbc.co.uk/news/business-45242008
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
